--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example
 # Google Analytics
 google-analytics: # add your identifier. For example UA-99631805-1.
 
-
+#dont change any of this
 # Build settings
 markdown: kramdown
 permalink: pretty
